--- a/ERP/registroUsuario.xaml
+++ b/ERP/registroUsuario.xaml
@@ -7,13 +7,15 @@
         mc:Ignorable="d"
         Title="registroUsuario" Height="450" Width="800">
     <Grid x:Name="PasswordUsuario_lbl1">
-        <TextBox x:Name="nombreUsuario_txt" HorizontalAlignment="Left" Margin="470,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="158" Height="31" TextChanged="nombreUsuario_lbl_TextChanged"/>
-        <TextBox x:Name="CodigoUsuario_txt" HorizontalAlignment="Left" Margin="470,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="158" Height="31" TextChanged="CodigoUsuario_lbl_TextChanged"/>
-        <TextBox x:Name="passwordUsuario_txt" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="158" Height="31" Margin="470,186,0,0" TextChanged="TextBox_TextChanged"/>
-        <Button x:Name="inscribirse_btn" Content="Incribirse" HorizontalAlignment="Left" Margin="480,244,0,0" VerticalAlignment="Top" Height="39" Width="92" Click="inscribirse_btn_Click"/>
-        <Button x:Name="volver_btn" Content="Volver" HorizontalAlignment="Left" Margin="657,362,0,0" VerticalAlignment="Top" Height="41" Width="99"/>
-        <Label Content="Código del usuario:" HorizontalAlignment="Left" Margin="336,66,0,0" VerticalAlignment="Top" Height="30" Width="112"/>
-        <Label Content="Contraseña:" HorizontalAlignment="Left" Margin="336,183,0,0" VerticalAlignment="Top" Height="34" Width="86"/>
-        <Label Content="Nombre del usuario:" HorizontalAlignment="Center" Margin="0,120,0,0" VerticalAlignment="Top" Height="29" Width="128"/>
+        <Image  Margin="0" x:Name="image1"  Stretch="UniformToFill" 
+           Source="Resources\Fondo_Inicio.jpg" />
+        <TextBox x:Name="nombreUsuario_txt" HorizontalAlignment="Left" Margin="167,137,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="158" Height="31" TextChanged="nombreUsuario_lbl_TextChanged"/>
+        <TextBox x:Name="CodigoUsuario_txt" HorizontalAlignment="Left" Margin="167,77,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="158" Height="31" TextChanged="CodigoUsuario_lbl_TextChanged"/>
+        <TextBox x:Name="passwordUsuario_txt" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="158" Height="32" Margin="167,200,0,0" TextChanged="TextBox_TextChanged"/>
+        <Button x:Name="inscribirse_btn" Content="Incribirse" HorizontalAlignment="Left" Margin="104,267,0,0" VerticalAlignment="Top" Height="28" Width="126" Click="inscribirse_btn_Click"/>
+        <Button x:Name="volver_btn" Content="Volver" HorizontalAlignment="Left" Margin="705,373,0,0" VerticalAlignment="Top" Height="28" Width="66" Click="volver_btn_Click"/>
+        <Label Content="Código del usuario:" HorizontalAlignment="Left" Margin="24,78,0,0" VerticalAlignment="Top" Height="30" Width="112"/>
+        <Label Content="Contraseña:" HorizontalAlignment="Left" Margin="24,199,0,0" VerticalAlignment="Top" Height="34" Width="86"/>
+        <Label Content="Nombre del usuario:" HorizontalAlignment="Left" Margin="24,137,0,0" VerticalAlignment="Top" Height="28" Width="128"/>
     </Grid>
 </Window>
